--- a/_assets/sass/_type.sass
+++ b/_assets/sass/_type.sass
@@ -8,7 +8,7 @@ $baseline: 1.5em
 
 .screenreader-text
   position: absolute
-  top: -1000em
+  top: -99999em
 
 html
   font: 400 100% / #{$baseline} $font-stack-primary
